--- a/style.css
+++ b/style.css
@@ -1,27 +1,21 @@
-
 *{
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 .logo{
-    width: 7%;
-    height:7%;
+    width:9%;
 }
-.card-img-top
-{
+.card-img-top {
     width:100%;
     height: 200px;
-    object-fit: contain;
+    /* object-fit: contain; */
 }
-.bottom {
-    position: absolute; /* Set div position to relative */
-  }
-  .parent {
-    position: relative;
-  }
-  .cart_img{
-    height: 70px;
-    width: 70px;
+.admin_image{
+    width:100px;
     object-fit:contain;
-  }
+}
+.cart_img{
+   width:50px;
+   height:50px; 
+}
